--- a/Utalii/Base.lproj/Main.storyboard
+++ b/Utalii/Base.lproj/Main.storyboard
@@ -164,6 +164,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="GhI-zt-UM2"/>
+                    <connections>
+                        <outlet property="mobileTF" destination="2np-II-ijw" id="Dlj-Oz-REe"/>
+                        <outlet property="passwordTF" destination="hgq-7C-KVS" id="hli-o4-VK5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -539,6 +543,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="8Za-iD-zFN">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -2448,13 +2453,72 @@
                     <view key="view" contentMode="scaleToFill" id="x6t-iM-fRk">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="maT-f8-bBF">
+                                <rect key="frame" x="0.0" y="20" width="414" height="716"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WU3-AC-4bZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Payment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rP0-y2-AID">
+                                                <rect key="frame" x="26" y="24" width="199" height="39"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add multiple cards for payment and select one as default" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yeM-nR-36a">
+                                                <rect key="frame" x="26" y="71" width="340" height="67"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7vf-DI-5IV">
+                                                <rect key="frame" x="26" y="176" width="362" height="336"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <prototypes>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="220" id="aJ8-84-0Gm">
+                                                        <rect key="frame" x="0.0" y="28" width="362" height="220"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="aJ8-84-0Gm" id="FA0-Vc-8nW">
+                                                            <rect key="frame" x="0.0" y="0.0" width="362" height="219.66666666666666"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                        </tableViewCellContentView>
+                                                    </tableViewCell>
+                                                </prototypes>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="IH7-IU-5de" id="pZK-F1-re5"/>
+                                                    <outlet property="delegate" destination="IH7-IU-5de" id="V7a-kJ-Z7e"/>
+                                                </connections>
+                                            </tableView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="WU3-AC-4bZ" firstAttribute="leading" secondItem="maT-f8-bBF" secondAttribute="leading" id="GYq-nP-2xC"/>
+                                    <constraint firstAttribute="bottom" secondItem="WU3-AC-4bZ" secondAttribute="bottom" id="KeM-IL-glT"/>
+                                    <constraint firstItem="WU3-AC-4bZ" firstAttribute="width" secondItem="maT-f8-bBF" secondAttribute="width" id="SRV-rQ-ndb"/>
+                                    <constraint firstAttribute="trailing" secondItem="WU3-AC-4bZ" secondAttribute="trailing" id="aDH-Hc-xCh"/>
+                                    <constraint firstItem="WU3-AC-4bZ" firstAttribute="top" secondItem="maT-f8-bBF" secondAttribute="top" id="gKZ-kM-SxH"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="maT-f8-bBF" firstAttribute="leading" secondItem="4ln-46-c4A" secondAttribute="leading" id="cwC-bv-0Mo"/>
+                            <constraint firstItem="maT-f8-bBF" firstAttribute="top" secondItem="4ln-46-c4A" secondAttribute="top" id="faQ-t9-r3E"/>
+                            <constraint firstItem="maT-f8-bBF" firstAttribute="bottom" secondItem="4ln-46-c4A" secondAttribute="bottom" id="h1H-QA-GUy"/>
+                            <constraint firstItem="maT-f8-bBF" firstAttribute="trailing" secondItem="4ln-46-c4A" secondAttribute="trailing" id="o9I-H3-5Ec"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="4ln-46-c4A"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bwC-ir-im3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5205" y="-1204"/>
+            <point key="canvasLocation" x="5204.347826086957" y="-1204.0760869565217"/>
         </scene>
         <!--Trip DetailsVC-->
         <scene sceneID="vPo-pS-Oj8">
