--- a/Utalii/Base.lproj/Main.storyboard
+++ b/Utalii/Base.lproj/Main.storyboard
@@ -196,14 +196,157 @@
                     <view key="view" contentMode="scaleToFill" id="KvQ-4f-G8z">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="sye-ja-KLF">
+                                <rect key="frame" x="0.0" y="20" width="414" height="667"/>
+                                <color key="backgroundColor" red="0.96077781915664673" green="0.96077805757522583" blue="0.96077650785446167" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="121" id="8J1-sg-he8">
+                                        <rect key="frame" x="0.0" y="55.333333333333343" width="414" height="121"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8J1-sg-he8" id="Ndo-68-RNy">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="121"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="singleGuideImage" translatesAutoresizingMaskIntoConstraints="NO" id="O4X-QR-bcY">
+                                                    <rect key="frame" x="20" y="25.666666666666671" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="70" id="dWq-aH-6FP"/>
+                                                        <constraint firstAttribute="height" constant="70" id="wbP-Fw-wLv"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="35"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Peter Avis MD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCq-Ry-Kmd">
+                                                    <rect key="frame" x="105" y="21" width="125" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="9L1-Np-63U"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10:56" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3G0-MJ-8Pr">
+                                                    <rect key="frame" x="363.33333333333331" y="15" width="36.666666666666686" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="e7l-0E-2vx"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cG7-te-07H">
+                                                    <rect key="frame" x="87" y="119" width="327" height="1"/>
+                                                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="lby-D2-FmS"/>
+                                                    </constraints>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dummy text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cVX-3l-aEV">
+                                                    <rect key="frame" x="105" y="39" width="87.333333333333314" height="34"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="34" id="RTk-1X-DC0"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="O4X-QR-bcY" firstAttribute="leading" secondItem="Ndo-68-RNy" secondAttribute="leadingMargin" id="4mr-lb-H6t"/>
+                                                <constraint firstItem="3G0-MJ-8Pr" firstAttribute="top" secondItem="Ndo-68-RNy" secondAttribute="top" constant="15" id="8Mi-I4-G1b"/>
+                                                <constraint firstAttribute="trailing" secondItem="cG7-te-07H" secondAttribute="trailing" id="8gm-hT-kh0"/>
+                                                <constraint firstItem="cVX-3l-aEV" firstAttribute="leading" secondItem="O4X-QR-bcY" secondAttribute="trailing" constant="15" id="DJ7-5o-xwi"/>
+                                                <constraint firstAttribute="bottom" secondItem="cG7-te-07H" secondAttribute="bottom" constant="1" id="Fjh-5N-c0A"/>
+                                                <constraint firstItem="cCq-Ry-Kmd" firstAttribute="top" secondItem="Ndo-68-RNy" secondAttribute="topMargin" constant="10" id="NbR-aJ-bjY"/>
+                                                <constraint firstAttribute="trailing" secondItem="3G0-MJ-8Pr" secondAttribute="trailing" constant="14" id="VZN-B7-goz"/>
+                                                <constraint firstItem="cVX-3l-aEV" firstAttribute="top" secondItem="3G0-MJ-8Pr" secondAttribute="bottom" id="ZgO-Xc-1bq"/>
+                                                <constraint firstItem="cG7-te-07H" firstAttribute="leading" secondItem="Ndo-68-RNy" secondAttribute="leading" constant="87" id="dkQ-cA-RSp"/>
+                                                <constraint firstItem="cCq-Ry-Kmd" firstAttribute="leading" secondItem="O4X-QR-bcY" secondAttribute="trailing" constant="15" id="hos-m9-jWt"/>
+                                                <constraint firstItem="O4X-QR-bcY" firstAttribute="centerY" secondItem="Ndo-68-RNy" secondAttribute="centerY" id="oFk-OQ-sWz"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="7VX-qz-jgT" id="AiT-hj-SuE"/>
+                                    <outlet property="delegate" destination="7VX-qz-jgT" id="cPb-MP-pNx"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="sye-ja-KLF" firstAttribute="leading" secondItem="Hdb-48-5Bt" secondAttribute="leading" id="AO5-54-tba"/>
+                            <constraint firstItem="sye-ja-KLF" firstAttribute="trailing" secondItem="Hdb-48-5Bt" secondAttribute="trailing" id="JFv-3W-p74"/>
+                            <constraint firstItem="sye-ja-KLF" firstAttribute="bottom" secondItem="Hdb-48-5Bt" secondAttribute="bottom" id="k61-or-YOn"/>
+                            <constraint firstItem="sye-ja-KLF" firstAttribute="top" secondItem="Hdb-48-5Bt" secondAttribute="top" id="ofc-a3-axt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Hdb-48-5Bt"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Message" image="messageOFFImage" id="Kit-kw-Ydk"/>
+                    <connections>
+                        <outlet property="headerView" destination="cEn-XN-QKA" id="iC8-YR-w5b"/>
+                        <outlet property="tableView" destination="sye-ja-KLF" id="PDr-uk-GzV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="myR-aS-uIx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="cEn-XN-QKA">
+                    <rect key="frame" x="0.0" y="0.0" width="400" height="122"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="header_background" translatesAutoresizingMaskIntoConstraints="NO" id="1ls-Zu-YBP">
+                            <rect key="frame" x="0.0" y="0.0" width="400" height="122"/>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileImage" translatesAutoresizingMaskIntoConstraints="NO" id="v07-Xy-sfP">
+                            <rect key="frame" x="32" y="32" width="70" height="70"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="70" id="0z8-bi-PZp"/>
+                                <constraint firstAttribute="width" constant="70" id="Pma-rf-WnM"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="35"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are at  Durban, SA" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0W-i4-Npe">
+                            <rect key="frame" x="140" y="32" width="135" height="70"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="70" id="sB6-pN-zdJ"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5O9-JI-5Dk">
+                            <rect key="frame" x="333" y="47" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="0LC-zA-aA5"/>
+                                <constraint firstAttribute="height" constant="40" id="v0M-od-A73"/>
+                            </constraints>
+                            <state key="normal" image="notificationwithoutbell"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="v07-Xy-sfP" firstAttribute="top" secondItem="6GM-cK-pJx" secondAttribute="top" constant="32" id="2a4-06-plj"/>
+                        <constraint firstItem="Q0W-i4-Npe" firstAttribute="top" secondItem="6GM-cK-pJx" secondAttribute="top" constant="32" id="55z-vZ-kPW"/>
+                        <constraint firstItem="1ls-Zu-YBP" firstAttribute="top" secondItem="6GM-cK-pJx" secondAttribute="top" id="91Y-m2-dSy"/>
+                        <constraint firstItem="6GM-cK-pJx" firstAttribute="trailing" secondItem="1ls-Zu-YBP" secondAttribute="trailing" id="CbU-TS-N7P"/>
+                        <constraint firstItem="5O9-JI-5Dk" firstAttribute="leading" secondItem="Q0W-i4-Npe" secondAttribute="trailing" constant="58" id="Cnt-8g-Ppd"/>
+                        <constraint firstItem="v07-Xy-sfP" firstAttribute="leading" secondItem="6GM-cK-pJx" secondAttribute="leading" constant="32" id="ESS-Y5-ocF"/>
+                        <constraint firstItem="6GM-cK-pJx" firstAttribute="trailing" secondItem="5O9-JI-5Dk" secondAttribute="trailing" constant="27" id="Fdp-7h-Y0A"/>
+                        <constraint firstItem="Q0W-i4-Npe" firstAttribute="leading" secondItem="v07-Xy-sfP" secondAttribute="trailing" constant="38" id="U4x-EB-5Rr"/>
+                        <constraint firstItem="5O9-JI-5Dk" firstAttribute="top" secondItem="6GM-cK-pJx" secondAttribute="top" constant="47" id="iMl-e7-FLa"/>
+                        <constraint firstItem="1ls-Zu-YBP" firstAttribute="bottom" secondItem="6GM-cK-pJx" secondAttribute="bottom" id="lED-eq-GD5"/>
+                        <constraint firstItem="1ls-Zu-YBP" firstAttribute="leading" secondItem="6GM-cK-pJx" secondAttribute="leading" id="tnL-y9-I8l"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="6GM-cK-pJx"/>
+                </view>
             </objects>
-            <point key="canvasLocation" x="2690" y="461"/>
+            <point key="canvasLocation" x="2689.8550724637685" y="766.304347826087"/>
         </scene>
         <!--HomeVC-->
         <scene sceneID="i4M-hH-7fR">
